--- a/app/partials/new_game.html
+++ b/app/partials/new_game.html
@@ -1,4 +1,5 @@
 <p>This is the partial for the new game page.</p>
-<p>
-    {{story}}
-</p>
+<ul>
+    <li><a href="#/story">Story</a></li>
+    <li><a href="#/background">Background</a></li>
+</ul
