--- a/app/partials/new_game.html
+++ b/app/partials/new_game.html
@@ -1,17 +1,17 @@
 <div class="container" ng-controller="NewGameCtrl">
     <h1>New game</h1>
     <p>You begin the game with standard equipment and training.</p>
-    <p>Please choose three additional skills:</p>
-    <pre>{{chosenSkills}}</pre>
-    <pre>{{selectedCount}}</pre>
+    <p>Please choose three additional skills, and then click "Begin":</p>
     <form>
         <label ng-repeat="skill in skills" class="checkbox">
             <input type="checkbox" value="{{skill.name}}" ng-checked="isSelected(skill)"
             ng-click="selectSkill($event, skill)" ng-model="skill.checked" ng-disabled="selectedCount>=3 && !skill.checked">
                 <a href="" data-toggle="tooltip" title="{{skill.desc}}">{{skill.name}}</a>
         </label>
-        <button type="submit" class="btn btn-primary" ng-click="update()" ng-disabled="chosenSkills.length<3">
+        <button type="submit" class="btn btn-primary" ng-click="beginGame()" ng-disabled="chosenSkills.length<3">
             Begin
         </button>
     </form>
+    <pre>{{chosenSkills}}</pre>
+    <pre>{{selectedCount}}</pre>
 </div>
