Title image on title.

--- a/app/partials/title.html
+++ b/app/partials/title.html
@@ -1,6 +1,7 @@
 <div class="jumbotron masthead">
     <div class="container">
         <h2>The Way of the Tiger</h2>
+        <p><img src="img/tiger.png" /></p>
         <h1>Avenger!</h1>
         <h2>By Mark Smith and Jamie Thomson</h2>
         <h3>Illustrations by Bob Harvey</h3>
