--- a/app/partials/new_game.html
+++ b/app/partials/new_game.html
@@ -1,4 +1,5 @@
 <div class="container-fluid" ng-controller="NewGameCtrl">
+    <ng-include src="'partials/navbar.html'"></ng-include>
     <div class="row">
         <div class="span3 charsheet">
             <ng-include src="'partials/charsheet.html'" ng-controller="NewGameCtrl"></ng-include>
