--- a/app/partials/story.html
+++ b/app/partials/story.html
@@ -1,4 +1,17 @@
-<p>This is the partial for the story page.</p>
-<p>
-    {{story}}
-</p>
+<div class="container-fluid" ng-controller="StoryCtrl">
+    <ng-include src="'partials/navbar.html'"></ng-include>
+    <div class="row">
+        <div class="span3 charsheet">
+            <ng-include src="'partials/charsheet.html'"></ng-include>
+        </div>
+        <div class="span9">
+            <br>
+            <button class="btn btn-primary" ng-click="swapEntry(1)">1</button>
+            <p>{{entry.data.description}}</p>
+            <p>Will you:</p>
+            <ul>
+                <li ng-repeat="option in entry.data.options"><a href="" ng-click="swapEntry(option.entry)">{{option.text}}</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
