Finally learned about the ng-show directive.

--- a/app/partials/new_game.html
+++ b/app/partials/new_game.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" ng-controller="NewGameCtrl">
+<div class="container" ng-controller="NewGameCtrl">
     <ng-include src="'partials/navbar.html'"></ng-include>
     <div class="row">
         <div class="span3 charsheet">
