--- a/app/partials/story.html
+++ b/app/partials/story.html
@@ -1,17 +1,22 @@
-<div class="container-fluid" ng-controller="StoryCtrl">
+<div class="container" ng-controller="StoryCtrl">
     <ng-include src="'partials/navbar.html'"></ng-include>
     <div class="row">
         <div class="span2 charsheet">
             <ng-include src="'partials/charsheet.html'"></ng-include>
         </div>
         <div class="span8">
-            <br>
-            <button class="btn btn-primary" ng-click="swapEntry(1)">1</button>
-            <p>{{gameState.entry.description}}</p>
-            <p>Will you:</p>
-            <ul>
-                <li ng-repeat="option in gameState.entry.options"><a href="" ng-click="swapEntry(option.entry)">{{option.text}}</a></li>
-            </ul>
+            <div class="row">
+                <br>
+                <img ng-show="entryImage" src="img/{{gameState.entry.image}}" class="pull-right"/>
+                <button class="btn btn-primary" ng-click="swapEntry(1)">1</button>
+                <p>{{gameState.entry.description}}</p>
+            </div>
+            <div class="row">
+                <p>Will you:</p>
+                <ul>
+                    <li ng-repeat="option in gameState.entry.options"><a href="" ng-click="swapEntry(option.entry)">{{option.text}}</a></li>
+                </ul>
+            </div>
         </div>
         <div class="span2">
             <h4>Opponents</h4>
