--- a/app/css/app.css
+++ b/app/css/app.css
@@ -89,3 +89,17 @@ body {
   display: none;
 }
 
+/* New game partial
+ * ---------------- */
+
+.newgameform a {
+  color: #000;
+  -webkit-transition: all .2s ease-in-out;
+     -moz-transition: all .2s ease-in-out;
+          transition: all .2s ease-in-out;
+}
+.newgameform a:hover {
+  color: #000;
+  text-shadow: 0 0 10px rgba(255,255,255,.25);
+}
+
