--- a/app/partials/new_game.html
+++ b/app/partials/new_game.html
@@ -7,8 +7,8 @@
         <div class="span9">
             <h1>New game</h1>
             <p>You begin the game with standard equipment and training.</p>
-            <p>Please choose three additional skills, and then click "Begin":</p>
-            <form>
+            <p>Please choose three additional skills (hover for a description of each one), and then click "Begin":</p>
+            <form class="newgameform">
                 <label ng-repeat="skill in skills" class="checkbox">
                     <input type="checkbox" value="{{skill.name}}" ng-checked="isSelected(skill)"
                     ng-click="selectSkill($event, skill)" ng-model="skill.checked" ng-disabled="selectedCount>=3 && !skill.checked">
