Minor cosmetic changes.

--- a/app/partials/charsheet.html
+++ b/app/partials/charsheet.html
@@ -1,19 +1,19 @@
 <h4>Character sheet</h4>
 <p>Endurance: {{gameState.endurance}}</p>
-<p>Combat ratings:
+Combat ratings:
 <ul>
     <li>Punch: {{gameState.punch}}</li>
     <li>Kick: {{gameState.kick}}</li>
     <li>Throw: {{gameState.throw}}</li>
     <li>Fate: {{gameState.fate}}</li>
-</ul></p>
+</ul>
 <p>Inner Force: {{gameState.innerForce}}</p>
 <p>Shuriken: {{gameState.shuriken}}</p>
-<p>Items:
+Items:
 <ul>
     <li ng-repeat="item in gameState.items">{{item.name}}</li>
-</ul></p>
-<p>Skills:
+</ul>
+Skills:
 <ul>
     <li ng-repeat="skill in gameState.skills">{{skill.name}}</li>
-</ul></p>
+</ul>
