--- a/app/partials/story.html
+++ b/app/partials/story.html
@@ -10,9 +10,8 @@
                 <img ng-show="gameState.hasEntryImage" src="img/{{gameState.entry.image}}" class="pull-right"/>
                 <div ng-bind-html-unsafe="gameState.entryText"></div>
             </div>
-            <div class="row" ng-show="gameState.actionText">
+            <div class="row" ng-show="gameState.actionText" ng-bind-html-unsafe="gameState.actionText">
                 <!-- This is where attack and response text is displayed -->
-                <p>{{gameState.actionText}}</p>
             </div>
             <div class="row">
                 <p>Will you:</p>
