--- a/app/partials/story.html
+++ b/app/partials/story.html
@@ -14,7 +14,7 @@
                 <!-- This is where attack and response text is displayed -->
             </div>
             <div class="row">
-                <p ng-show="gameState.options.length() > 1">Will you:</p>
+                <p ng-show="gameState.options.length > 1">Will you:</p>
                 <ul>
                     <li ng-repeat="option in gameState.options">
                         <a href="" ng-click="chooseEntry(option, false)">{{option.text}}</a>
