Added text to background page.

--- a/app/partials/navbar.html
+++ b/app/partials/navbar.html
@@ -5,7 +5,7 @@
           <li class="active"><a href="/">Home</a></li>
           <li><a href="#">Save</a></li>
           <li><a href="#">Load</a></li>
-          <li><a href="#">Background</a></li>
+          <li><a href="#/background">Background</a></li>
           <li><a href="#">Instructions</a></li>
         </ul>
       </div>
