--- a/app/partials/title.html
+++ b/app/partials/title.html
@@ -8,7 +8,7 @@
         <ul class="masthead-links">
             <li><a href="#/new-game">Start a new game</a></li>
             <li>Load a saved game</li>
-            <li>Background</li>
+            <li><a href="#/background">Background</a></li>
             <li>Instructions</li>
             <li>Copyright/About</li>
         </ul>
