--- a/app/partials/navbar.html
+++ b/app/partials/navbar.html
@@ -2,9 +2,9 @@
     <div class="navbar-inner">
         <a class="brand" href="/">Avenger!</a>
         <ul class="nav">
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="#">Save</a></li>
-          <li><a href="#">Load</a></li>
+          <li><a href="#/new-game">New game</a></li>
+          <!--<li><a href="#">Save</a></li>
+          <li><a href="#">Load</a></li>-->
           <li><a href="#/background">Background</a></li>
           <li><a href="#">Instructions</a></li>
         </ul>
