--- a/app/partials/story.html
+++ b/app/partials/story.html
@@ -6,7 +6,8 @@
         </div>
         <div class="span8">
             <div class="row">
-                <h4>{{gameState.currentEntry}}</h4>
+                <h4 ng-show="gameState.currentEntry != 'death'">{{gameState.currentEntry}}</h4>
+                <h4 ng-show="gameState.currentEntry == 'death'">You have died</h4>
                 <img ng-show="gameState.hasEntryImage" src="img/{{gameState.entry.image}}" class="pull-right"/>
                 <div ng-bind-html-unsafe="gameState.entryText"></div>
             </div>
