--- a/app/partials/navbar.html
+++ b/app/partials/navbar.html
@@ -2,11 +2,12 @@
     <div class="navbar-inner">
         <a class="brand" href="/">Avenger!</a>
         <ul class="nav">
-          <li><a href="#/new-game">New game</a></li>
-          <!--<li><a href="#">Save</a></li>
-          <li><a href="#">Load</a></li>-->
-          <li><a href="#/background">Background</a></li>
-          <li><a href="#">Instructions</a></li>
+            <li ng-show="gameState.inProgress=false"><a href="#/new-game">New game</a></li>
+            <li ng-show="gameState.inProgress=true"><a href="#/story">Story</a></li>
+            <!--<li><a href="#">Save</a></li>
+            <li><a href="#">Load</a></li>-->
+            <li><a href="#/background">Background</a></li>
+            <li><a href="#">Instructions</a></li>
         </ul>
-      </div>
+    </div>
 </div>
