Bugfix: new game kept stacking items.

--- a/app/partials/navbar.html
+++ b/app/partials/navbar.html
@@ -2,7 +2,7 @@
     <div class="navbar-inner">
         <a class="brand" href="/">Avenger!</a>
         <ul class="nav">
-            <li ng-show="gameState.inProgress=false"><a href="#/new-game">New game</a></li>
+            <li><a href="#/new-game">New game</a></li>
             <li ng-show="gameState.inProgress=true"><a href="#/story">Current game</a></li>
             <!--<li><a href="#">Save</a></li>
             <li><a href="#">Load</a></li>-->
