--- a/app/partials/title.html
+++ b/app/partials/title.html
@@ -6,7 +6,7 @@
         <h2>By Mark Smith and Jamie Thomson</h2>
         <h3>Illustrations by Bob Harvey</h3>
         <ul class="masthead-links">
-            <li ng-show="gameState.inProgress=false"><a href="#/new-game">Start a new game</a></li>
+            <li><a href="#/new-game">Start a new game</a></li>
             <li ng-show="gameState.inProgress=true"><a href="#/story">Continue game</a></li>
             <li>Load a saved game</li>
             <li><a href="#/background">Background</a></li>
