--- a/app/partials/charsheet.html
+++ b/app/partials/charsheet.html
@@ -27,7 +27,7 @@ Combat ratings:
         </li>
     </ul>
 </div>
-<div ng-show="gameState.notes">
+<div>
     Notes:
     <ul>
         <li ng-repeat="note in gameState.notes">
