--- a/app/partials/new_game.html
+++ b/app/partials/new_game.html
@@ -7,6 +7,7 @@
             <p>Please choose three additional skills (hover for a description of each one), and then click "Begin":</p>
             <form class="newgameform">
                 <label ng-repeat="skill in skills" class="checkbox">
+                    <!-- Display a checkbox select for each skill. Disable the unselected ones if three skills are selected. -->
                     <input type="checkbox" value="{{skill.name}}" ng-checked="isSelected(skill)"
                     ng-click="selectSkill($event, skill)" ng-model="skill.checked" ng-disabled="selectedCount>=3 && !skill.checked" />
                         <a href="" data-toggle="tooltip" title="{{skill.desc}}">{{skill.name}}</a>
