Couple of entries , solved the img src 404 thing (ng-src FTW).

--- a/app/partials/charsheet.html
+++ b/app/partials/charsheet.html
@@ -1,4 +1,4 @@
-<h4>Character sheet</h4>
+<h4>Character</h4>
 <p ng-show="gameState.cheatMode" class="text-error">CHEAT MODE</p>
 <p>Endurance: {{gameState.endurance}}</p>
 Combat ratings:
