Couple of entries, half-finished 'last entry'.

--- a/app/partials/story.html
+++ b/app/partials/story.html
@@ -8,6 +8,7 @@
             <div class="row">
                 <h4 ng-show="gameState.currentEntry != 'death'">{{gameState.currentEntry}}</h4>
                 <h4 ng-show="gameState.currentEntry == 'death'">You have died</h4>
+                <p ng-show="gameState.lastEntry != null"><a href="" ng-click="lastEntry()">Last entry...</a></p>
                 <img ng-show="gameState.hasEntryImage" ng-src="img/{{gameState.entry.image}}" class="pull-right"/>
                 <div ng-bind-html-unsafe="gameState.entryText"></div>
             </div>
