Added instructions page.

--- a/app/partials/navbar.html
+++ b/app/partials/navbar.html
@@ -7,7 +7,7 @@
             <!--<li><a href="#">Save</a></li>
             <li><a href="#">Load</a></li>-->
             <li><a href="#/background">Background</a></li>
-            <li><a href="#">Instructions</a></li>
+            <li><a href="#/instructions">Instructions</a></li>
         </ul>
     </div>
 </div>
