--- a/app/partials/title.html
+++ b/app/partials/title.html
@@ -9,7 +9,7 @@
             <li><a href="#/new-game">Start a new game</a></li>
             <li ng-show="gameState.inProgress"><a href="#/story">Continue game</a></li>
             <li><a href="#/background">Background</a></li>
-            <li>Instructions</li>
+            <li><a href="#/instructions">Instructions</a></li>
             <li>Copyright/About</li>
         </ul>
     </div>
