--- a/app/partials/navbar.html
+++ b/app/partials/navbar.html
@@ -6,8 +6,9 @@
             <li ng-show="gameState.inProgress=true"><a href="#/story">Current game</a></li>
             <!--<li><a href="#">Save</a></li>
             <li><a href="#">Load</a></li>-->
-            <li><a href="#/background">Background</a></li>
+            <li><a href="#/background">Story background</a></li>
             <li><a href="#/instructions">Instructions</a></li>
+            <li><a href="#/about">About project</a></li>
         </ul>
     </div>
 </div>
