--- a/app/css/app.css
+++ b/app/css/app.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background: #eee9df url('/img/washi.png') repeat;
+    background: #eee9df url('../img/washi.png') repeat;
 }
 
 /* Jumbotrons
