Additional HTML comments in index.html.

--- a/app/partials/title.html
+++ b/app/partials/title.html
@@ -10,6 +10,7 @@
             <li ng-show="gameState.inProgress"><a href="#/story">Continue game</a></li>
             <li><a href="#/background">Background</a></li>
             <li><a href="#/instructions">Instructions</a></li>
+            <li><a href="#/about">About</a></li>
             <li><a href="https://bitbucket.org/ropable/way-of-the-tiger-1-avenger" target="_blank">Source</a></li>
         </ul>
     </div>
