--- a/app/partials/story.html
+++ b/app/partials/story.html
@@ -34,7 +34,7 @@
         </div>
         <div class="span2">
             <h4>Opponents</h4>
-            <div ng-repeat="o in gameState.currentOpponents">
+            <div ng-repeat="o in gameState.currentOpponents" class="handwritten">
                 <strong>{{o.name}}</strong><br>
                 Endurance: {{o.endurance}}<br>
             </div>
